tests/test_files_pa3/external/errors/NoReturnError.ic

class NoReturnError{
	
	int a;
	int b;
	
	int ok1(int k){
		if (k>0){
			return 1;
		} else{
			if (k<0)
				return -1;
			else return 0;	
		}
	}
		
				
	int ok2(int k){
		if (k>0){
			k = k+1;
		} else{
			if (k<0)
				return k;
			else k = k*k;	
		}
		return (k+4);
	}	
			
				
	int wrong(int k,int m){
		if (k>0){
			return 1;
		} else{
			if (k<0)
				return -1;
			else{}	
		}
	}
	
	static void main(string[] args){}
}
